Prevent table converter modal overflow

--- a/css/components.css
+++ b/css/components.css
@@ -2169,6 +2169,7 @@
 .table-converter-modal {
     max-width: 1240px;
     width: 92vw;
+    max-height: 92vh;
 }
 
 .table-converter-modal .table-converter-body {
